Updated dark mode and fixed offcanvas issue

--- a/CSS/home_page.css
+++ b/CSS/home_page.css
@@ -134,7 +134,7 @@
   }
 
   .dark-mode #topics {
-    background-color: #283758;
+    background-color: #172c48;
   }
 
   #topics .container {
